blog/static/styles.css
/* || Global */

html, button, input, select {
    font-family: "Roboto", sans-serif;
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    min-width: 20rem;
}

a {
    color: #000;
    text-decoration: none;
}

h1 {
    font-size: 3rem;
}

h2 {
    margin: 1rem 0;
    font-size: 1.25rem;
}

hr {
    border-top: none;
    border-color: #acacac;
    margin: 0;
}

ul {
    margin: 0;
    list-style-type: none;
}

li {
    margin: 0.275rem 0;
    cursor: pointer;
}

li::before {
    content: '\25B6';
    margin-right: 0.5rem;
}

form {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 2rem;
    margin-bottom: 1rem;
}

form div, form input {
    width: 100%;
}

form input {
    height: 100%;
    border-radius: 0;
    border-color: #acacac;
}

form input:focus {
    border-color: #000;
    outline: 0;
}

form button {
    width: 8rem;
    border: 0;
    padding: 0;
    background-color: #292929;
    color: #fff;
    text-transform: uppercase;
    cursor: pointer;
}

form button:hover, form button:focus {
    background-color: #3e3e3e;
}

/* || Links */

.title-link:hover, .title-link:focus, .dates a:hover, .dates a:focus {
    text-decoration: underline;
}

.link-previous:hover, .link-previous:focus, .link-next:hover, .link-next:focus, .text-link:focus, .text-link:hover {
    color: #464646;
}

/* || Typography */

.overlay-text.lower {
    font-size: 1.5rem;
}

@media screen and (min-width: 30rem) {
    .overlay-text.lower {
        font-size: 2rem;
    }
}

.post-title {
    font-size: 1.75rem;
}

.pub-date {
    color: #acacac;
    font-size: 1rem;
    font-weight: normal;
}

.result-title {
    margin-top: 1rem;
    font-size: 2rem;
    font-weight: bold;
}

.post-dir {
    font-weight: bold;
    text-transform: uppercase;
}

/* || Layouts */

/* Banner */

.page-header, .banner-overlay {
    height: 20rem;
}

.banner-overlay {
    width: 100%;
}

.banner-image {
    display: flex;
    position: relative;
    z-index: 0;
    height: 100%;
    background-image: url('sky-royalty-free.png');
    background-attachment: fixed;
    background-position: top;
    background-size: cover;
}

.banner-overlay, .text-link {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.banner-overlay {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
}

.overlay-text {
    margin: 0;
    padding: 1rem;
    line-height: 1.33;
}

@media screen and (min-width: 30rem) {
    .overlay-text {
        line-height: 1;
    }
}

.header-nav {
    display: flex;
    position: fixed;
    align-items: center;
    z-index: 2;
    width: 100%;
    height: 5rem;
}

@media screen and (min-width: 48rem) {
    .header-nav {
        display: none;
    }
}

.menu-button {
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 2rem;
    top: auto;
    justify-content: space-between;
    z-index: 1;
    width: 4rem;
    height: 66%;
    margin: 0;
    border: 1px solid #fff;
    border-radius: 0.33rem;
    padding: 0.5rem;
    background-color: transparent;
    cursor: pointer;
}

.menu-button div {
    width: 100%;
    height: 0.5rem;
    background-color: #fff;
}

.menu-button.sticky, .menu-button.active {
    background-color: #acacac;
}

.menu-button.active {
    justify-content: initial;
}

.menu-button.active div:nth-child(1) {
    transform: translate(0, 170%) rotate(45deg);
}

.menu-button.active div:nth-child(2) {
    transform: translate(0, 70%) rotate(-45deg);
}

.menu-button.active div:nth-child(3) {
    opacity: 0;
}

.header-menu {
    display: flex;
    flex-direction: column;
    position: absolute;
    right: -500px;
    top: 0;
    align-items: flex-start;
    z-index: 0;
    width: 25%;
    height: 100vh;
    min-width: 20rem;
    border: 1px solid #acacac;
    padding: 3rem 2rem;
    background-color: #fff;
    opacity: 0;
    transition: opacity 0.1s cubic-bezier(0, 0.47, 0.745, 0.715), right 0.2s cubic-bezier(1, 0, 1, 1);
    overflow-y: auto;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

.header-menu.active {
    right: 0;
    opacity: 1;
    transition: opacity 0.4s cubic-bezier(0.47, 0, 0.745, 0.715), right 0.3s cubic-bezier(0, 0, 0, 1);
}

.header.menu::-webkit-scrollbar {
    display: none;
}

/* Content */

.main-wrapper {
    padding-top: 2.5rem;
}

.content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    max-width: 75rem;
    min-height: 60rem;
    border: 1px solid #acacac;
    border-radius: 2rem;
    margin: 0 auto;
    padding: 1rem;
}

@media screen and (min-width: 37.5rem) {
    .content {
        width: 90%;
    }
}

@media screen and (min-width: 48rem) {
    .content {
        width: 85%;
    }
}

@media screen and (min-width: 64rem) {
    .content {
        width: 80%;
    }
}

/* Main Body */

@media screen and (min-width: 48rem) {
    .main-body {
        width: 63%;
    }
}

.blog-post {
    padding-bottom: 3rem;
}

.post-body {
    padding: 1rem 0;
}

/* Sidebar */

.sidebar {
    display: none;
    flex-direction: column;
    align-items: flex-start;
    width: 30%;
}

@media screen and (min-width: 48rem) {
    .sidebar {
        display: flex;
    }
}

/* Post Tree */

.post-tree {
    width: auto;
    margin: 0;
}

.sidebar h2 {
    border-bottom: 1px solid #acacac;
    padding: 0.5rem 0;
}

.years {
    padding: 0;
}

.year li {
    margin: 0.5rem auto;
}

.year.reveal::before, .month.reveal::before {
    content: '\25BC';
}

.dates li::before {
    content: none;
}

/* Footer */

.footer-lower {
    height: 4rem;
    background-color: #f1f1f1;
}

@media screen and (min-width: 48rem) {
    .footer-lower {
        height: 5rem;
    }
}

.footer-upper {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 10rem;
    border-top: 1px solid #acacac;
}

@media screen and (min-width: 30rem) {
    .footer-upper {
        height: 5rem;
    }
}

.nav-pages {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    width: 100%;
    height: 100%;
    margin-top: 0;
    padding: 1rem;
}

@media screen and (min-width: 30rem) {
    .nav-pages {
        flex-direction: row;
        align-items: center;
        width: 28rem;
    }
}

@media screen and (min-width: 48rem) {
    .nav-pages {
        width: 30rem;
    }
}

.previous-set, .next-set, .page-count {
    display: flex;
    align-items: center;
    height: 100%;
}

@media screen and (min-width: 30rem) {
    .previous-set, .page-count, .next-set {
        width: 100%;
    }
}

.page-count {
    justify-content: center;
}

@media screen and (min-width: 30rem) {
    .next-set {
        justify-content: flex-end;
    }
}

.title-preview {
    max-width: 10rem;
    text-overflow: ellipsis;
    overflow: hidden;
}

.link-next, .link-previous {
    display: flex;
    flex-direction: column;
}

@media screen and (min-width: 30rem) {
    .link-next {
        align-items: flex-end;
    }
}

